src/main/java/org/example/gen/python/pythonParser.java
// Generated from pythonParser.g4 by ANTLR 4.13.1
package org.example.gen.python;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class pythonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, KW_DEF=3, KW_CLASS=4, KW_RETURN=5, KW_IMPORT=6, KW_FROM=7, 
		KW_AS=8, KW_IF=9, KW_ELIF=10, KW_ELSE=11, KW_FOR=12, KW_IN=13, KW_WHILE=14, 
		KW_WITH=15, KW_PASS=16, KW_BREAK=17, KW_CONTINUE=18, KW_AND=19, KW_OR=20, 
		KW_NOT=21, KW_IS=22, KW_RAISE=23, KW_TRY=24, KW_EXCEPT=25, KW_FINALLY=26, 
		KW_GLOBAL=27, KW_DEL=28, KW_ASSERT=29, KW_LAMBDA=30, KW_NONLOCAL=31, KW_YIELD=32, 
		KW_ASYNC=33, KW_AWAIT=34, TRUE=35, FALSE=36, NONE=37, AUGASSIGN=38, ARROW=39, 
		DOUBLESTAR=40, DOUBLESLASH=41, LSHIFT=42, RSHIFT=43, EQEQ=44, NEQ=45, 
		LTE=46, GTE=47, EQ=48, LT=49, GT=50, PLUS=51, MINUS=52, STAR=53, SLASH=54, 
		PERCENT=55, AMP=56, PIPE=57, CARET=58, TILDE=59, AT=60, ELLIPSIS=61, DOT=62, 
		COLON=63, SEMI=64, COMMA=65, LPAREN=66, RPAREN=67, LBRACKET=68, RBRACKET=69, 
		LBRACE=70, RBRACE=71, STRING=72, NUMBER=73, IDENT=74, NEWLINE_WS=75, NEWLINE=76, 
		WS=77, COMMENT=78, LINE_CONTINUE=79;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_simpleStmt = 2, RULE_importStmt = 3, 
		RULE_fromImportStmt = 4, RULE_importNames = 5, RULE_importName = 6, RULE_dottedName = 7, 
		RULE_assignStmt = 8, RULE_augAssignStmt = 9, RULE_target = 10, RULE_returnStmt = 11, 
		RULE_deleteStmt = 12, RULE_assertStmt = 13, RULE_globalStmt = 14, RULE_nonlocalStmt = 15, 
		RULE_passStmt = 16, RULE_breakStmt = 17, RULE_continueStmt = 18, RULE_raiseStmt = 19, 
		RULE_yieldStmt = 20, RULE_exprStmt = 21, RULE_compoundStmt = 22, RULE_decoratedDef = 23, 
		RULE_decorator = 24, RULE_funcDef = 25, RULE_asyncFuncDef = 26, RULE_paramList = 27, 
		RULE_param = 28, RULE_kwParam = 29, RULE_classDef = 30, RULE_baseList = 31, 
		RULE_ifStmt = 32, RULE_forStmt = 33, RULE_whileStmt = 34, RULE_withStmt = 35, 
		RULE_withItem = 36, RULE_tryStmt = 37, RULE_exceptClause = 38, RULE_suite = 39, 
		RULE_expression = 40, RULE_lambdaExpr = 41, RULE_orExpr = 42, RULE_andExpr = 43, 
		RULE_notExpr = 44, RULE_comparison = 45, RULE_compOp = 46, RULE_arith = 47, 
		RULE_term = 48, RULE_factor = 49, RULE_power = 50, RULE_awaitExpr = 51, 
		RULE_trailer = 52, RULE_atom = 53, RULE_listContent = 54, RULE_dictContent = 55, 
		RULE_compFor = 56, RULE_compIf = 57, RULE_dictItem = 58, RULE_argList = 59, 
		RULE_argument = 60;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "simpleStmt", "importStmt", "fromImportStmt", 
			"importNames", "importName", "dottedName", "assignStmt", "augAssignStmt", 
			"target", "returnStmt", "deleteStmt", "assertStmt", "globalStmt", "nonlocalStmt", 
			"passStmt", "breakStmt", "continueStmt", "raiseStmt", "yieldStmt", "exprStmt", 
			"compoundStmt", "decoratedDef", "decorator", "funcDef", "asyncFuncDef", 
			"paramList", "param", "kwParam", "classDef", "baseList", "ifStmt", "forStmt", 
			"whileStmt", "withStmt", "withItem", "tryStmt", "exceptClause", "suite", 
			"expression", "lambdaExpr", "orExpr", "andExpr", "notExpr", "comparison", 
			"compOp", "arith", "term", "factor", "power", "awaitExpr", "trailer", 
			"atom", "listContent", "dictContent", "compFor", "compIf", "dictItem", 
			"argList", "argument"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'def'", "'class'", "'return'", "'import'", "'from'", 
			"'as'", "'if'", "'elif'", "'else'", "'for'", "'in'", "'while'", "'with'", 
			"'pass'", "'break'", "'continue'", "'and'", "'or'", "'not'", "'is'", 
			"'raise'", "'try'", "'except'", "'finally'", "'global'", "'del'", "'assert'", 
			"'lambda'", "'nonlocal'", "'yield'", "'async'", "'await'", "'True'", 
			"'False'", "'None'", null, "'->'", "'**'", "'//'", "'<<'", "'>>'", "'=='", 
			"'!='", "'<='", "'>='", "'='", "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'&'", "'|'", "'^'", "'~'", "'@'", "'...'", "'.'", "':'", "';'", 
			"','", "'('", "')'", "'['", "']'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INDENT", "DEDENT", "KW_DEF", "KW_CLASS", "KW_RETURN", "KW_IMPORT", 
			"KW_FROM", "KW_AS", "KW_IF", "KW_ELIF", "KW_ELSE", "KW_FOR", "KW_IN", 
			"KW_WHILE", "KW_WITH", "KW_PASS", "KW_BREAK", "KW_CONTINUE", "KW_AND", 
			"KW_OR", "KW_NOT", "KW_IS", "KW_RAISE", "KW_TRY", "KW_EXCEPT", "KW_FINALLY", 
			"KW_GLOBAL", "KW_DEL", "KW_ASSERT", "KW_LAMBDA", "KW_NONLOCAL", "KW_YIELD", 
			"KW_ASYNC", "KW_AWAIT", "TRUE", "FALSE", "NONE", "AUGASSIGN", "ARROW", 
			"DOUBLESTAR", "DOUBLESLASH", "LSHIFT", "RSHIFT", "EQEQ", "NEQ", "LTE", 
			"GTE", "EQ", "LT", "GT", "PLUS", "MINUS", "STAR", "SLASH", "PERCENT", 
			"AMP", "PIPE", "CARET", "TILDE", "AT", "ELLIPSIS", "DOT", "COLON", "SEMI", 
			"COMMA", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", 
			"STRING", "NUMBER", "IDENT", "NEWLINE_WS", "NEWLINE", "WS", "COMMENT", 
			"LINE_CONTINUE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "pythonParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public pythonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(pythonParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(pythonParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(pythonParser.NEWLINE, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pythonParserListener ) ((pythonParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pythonParserListener ) ((pythonParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pythonParserVisitor ) return ((pythonParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4041980940336485112L) != 0) || ((((_la - 66)) & ~0x3f) == 0 && ((1L << (_la - 66)) & 1493L) != 0)) {
				{
				setState(124);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NEWLINE:
					{
					setState(122);
					match(NEWLINE);
					}
					break;
				case KW_DEF:
				case KW_CLASS:
				case KW_RETURN:
				case KW_IMPORT:
				case KW_FROM:
				case KW_IF:
				case KW_FOR:
				case KW_WHILE:
				case KW_WITH:
				case KW_PASS:
				case KW_BREAK:
				case KW_CONTINUE:
				case KW_NOT:
				case KW_RAISE:
				case KW_TRY:
				case KW_GLOBAL:
				case KW_DEL:
				case KW_ASSERT:
				case KW_LAMBDA:
				case KW_NONLOCAL:
				case KW_YIELD:
				case KW_ASYNC:
				case KW_AWAIT:
				case TRUE:
				case FALSE:
				case NONE:
				case PLUS:
				case MINUS:
				case TILDE:
				case AT:
				case ELLIPSIS:
				case LPAREN:
				case LBRACKET:
				case LBRACE:
				case STRING:
				case NUMBER:
				case IDENT:
					{
					setState(123);
					statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(129);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public SimpleStmtContext simpleStmt() {
			return getRuleContext(SimpleStmtContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(pythonParser.NEWLINE, 0); }
		public TerminalNode EOF() { return getToken(pythonParser.EOF, 0); }
		public CompoundStmtContext compoundStmt() {
			return getRuleContext(CompoundStmtContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pythonParserListener ) ((pythonParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pythonParserListener ) ((pythonParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pythonParserVisitor ) return ((pythonParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_RETURN:
			case KW_IMPORT:
			case KW_FROM:
			case KW_PASS:
			case KW_BREAK:
			case KW_CONTINUE:
			case KW_NOT:
			case KW_RAISE:
			case KW_GLOBAL:
			case KW_DEL:
			case KW_ASSERT:
			case KW_LAMBDA:
			case KW_NONLOCAL:
			case KW_YIELD:
			case KW_AWAIT:
			case TRUE:
			case FALSE:
			case NONE:
			case PLUS:
			case MINUS:
			case TILDE:
			case ELLIPSIS:
			case LPAREN:
			case LBRACKET:
			case LBRACE:
			case STRING:
			case NUMBER:
			case IDENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				simpleStmt();
				setState(132);
				_la = _input.LA(1);
				if ( !(_la==EOF || _la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case KW_DEF:
			case KW_CLASS:
			case KW_IF:
			case KW_FOR:
			case KW_WHILE:
			case KW_WITH:
			case KW_TRY:
			case KW_ASYNC:
			case AT:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				compoundStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpleStmtContext extends ParserRuleContext {
		public ImportStmtContext importStmt() {
			return getRuleContext(ImportStmtContext.class,0);
		}
		public FromImportStmtContext fromImportStmt() {
			return getRuleContext(FromImportStmtContext.class,0);
		}
		public AssignStmtContext assignStmt() {
			return getRuleContext(AssignStmtContext.class,0);
		}
		public AugAssignStmtContext augAssignStmt() {
			return getRuleContext(AugAssignStmtContext.class,0);
		}
		public ReturnStmtContext returnStmt() {
			return getRuleContext(ReturnStmtContext.class,0);
		}
		public DeleteStmtContext deleteStmt() {
			return getRuleContext(DeleteStmtContext.class,0);
		}
		public AssertStmtContext assertStmt() {
			return getRuleContext(AssertStmtContext.class,0);
		}
		public GlobalStmtContext globalStmt() {
			return getRuleContext(GlobalStmtContext.class,0);
		}
		public NonlocalStmtContext nonlocalStmt() {
			return getRuleContext(NonlocalStmtContext.class,0);
		}
		public PassStmtContext passStmt() {
			return getRuleContext(PassStmtContext.class,0);
		}
		public BreakStmtContext breakStmt() {
			return getRuleContext(BreakStmtContext.class,0);
		}
		public ContinueStmtContext continueStmt() {
			return getRuleContext(ContinueStmtContext.class,0);
		}
		public RaiseStmtContext raiseStmt() {
			return getRuleContext(RaiseStmtContext.class,0);
		}
		public YieldStmtContext yieldStmt() {
			return getRuleContext(YieldStmtContext.class,0);
		}
		public ExprStmtContext exprStmt() {
			return getRuleContext(ExprStmtContext.class,0);
		}
		public SimpleStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pythonParserListener ) ((pythonParserListener)listener).enterSimpleStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pythonParserListener ) ((pythonParserListener)listener).exitSimpleStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pythonParserVisitor ) return ((pythonParserVisitor<? extends T>)visitor).visitSimpleStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleStmtContext simpleStmt() throws RecognitionException {
		SimpleStmtContext _localctx = new SimpleStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_simpleStmt);
		try {
			setState(152);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				importStmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				fromImportStmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(139);
				assignStmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(140);
				augAssignStmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(141);
				returnStmt();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(142);
				deleteStmt();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(143);
				assertStmt();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(144);
				globalStmt();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(145);
				nonlocalStmt();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(146);
				passStmt();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(147);
				breakStmt();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(148);
				continueStmt();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(149);
				raiseStmt();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(150);
				yieldStmt();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(151);
				exprStmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStmtContext extends ParserRuleContext {
		public TerminalNode KW_IMPORT() { return getToken(pythonParser.KW_IMPORT, 0); }
		public List<DottedNameContext> dottedName() {
			return getRuleContexts(DottedNameContext.class);
		}
		public DottedNameContext dottedName(int i) {
			return getRuleContext(DottedNameContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(pythonParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(pythonParser.COMMA, i);
		}
		public ImportStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pythonParserListener ) ((pythonParserListener)listener).enterImportStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pythonParserListener ) ((pythonParserListener)listener).exitImportStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pythonParserVisitor ) return ((pythonParserVisitor<? extends T>)visitor).visitImportStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStmtContext importStmt() throws RecognitionException {
		ImportStmtContext _localctx = new ImportStmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(KW_IMPORT);
			setState(155);
			dottedName();
			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(156);
				match(COMMA);
				setState(157);
				dottedName();
				}
				}
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FromImportStmtContext extends ParserRuleContext {
		public TerminalNode KW_FROM() { return getToken(pythonParser.KW_FROM, 0); }
		public DottedNameContext dottedName() {
			return getRuleContext(DottedNameContext.class,0);
		}
		public TerminalNode KW_IMPORT() { return getToken(pythonParser.KW_IMPORT, 0); }
		public ImportNamesContext importNames() {
			return getRuleContext(ImportNamesContext.class,0);
		}
		public FromImportStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fromImportStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pythonParserListener ) ((pythonParserListener)listener).enterFromImportStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pythonParserListener ) ((pythonParserListener)listener).exitFromImportStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pythonParserVisitor ) return ((pythonParserVisitor<? extends T>)visitor).visitFromImportStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FromImportStmtContext fromImportStmt() throws RecognitionException {
		FromImportStmtContext _localctx = new FromImportStmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fromImportStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(KW_FROM);
			setState(164);
			dottedName();
			setState(165);
			match(KW_IMPORT);
			setState(166);
			importNames();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportNamesContext extends ParserRuleContext {
		public TerminalNode STAR() { return getToken(pythonParser.STAR, 0); }
		public List<ImportNameContext> importName() {
			return getRuleContexts(ImportNameContext.class);
		}
		public ImportNameContext importName(int i) {
			return getRuleContext(ImportNameContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(pythonParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(pythonParser.COMMA, i);
		}
		public ImportNamesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importNames; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pythonParserListener ) ((pythonParserListener)listener).enterImportNames(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pythonParserListener ) ((pythonParserListener)listener).exitImportNames(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pythonParserVisitor ) return ((pythonParserVisitor<? extends T>)visitor).visitImportNames(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportNamesContext importNames() throws RecognitionException {
		ImportNamesContext _localctx = new ImportNamesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_importNames);
		int _la;
		try {
			setState(177);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(168);
				match(STAR);
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(169);
				importName();
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(170);
					match(COMMA);
					setState(171);
					importName();
					}
					}
					setState(176);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportNameContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(pythonParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(pythonParser.IDENT, i);
		}
		public TerminalNode KW_AS() { return getToken(pythonParser.KW_AS, 0); }
		public ImportNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pythonParserListener ) ((pythonParserListener)listener).enterImportName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pythonParserListener ) ((pythonParserListener)listener).exitImportName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pythonParserVisitor ) return ((pythonParserVisitor<? extends T>)visitor).visitImportName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportNameContext importName() throws RecognitionException {
		ImportNameContext _localctx = new ImportNameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_importName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			match(IDENT);
			setState(182);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_AS) {
				{
				setState(180);
				match(KW_AS);
				setState(181);
				match(IDENT);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
